Add section and footer

--- a/index.html
+++ b/index.html
@@ -1,73 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Golden</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Lora:ital,wght@1,500&family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./vendor/bootstrap-grid.css">
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    <header class="intro">
-        <div class="container">
-            <div class="row">
-                <div class="col-2">
-                    <h3>Golden</h3>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Golden</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Lora:ital,wght@1,500&family=Roboto:wght@700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./vendor/bootstrap-grid.css">
+        <link rel="stylesheet" href="./css/style.css">
+    </head>
+    <body>
+        <header class="intro">
+            <div class="container">
+                <div class="row">
+                    <div class="col-2">
+                        <h3>Golden</h3>
+                    </div>
+                    <div class="col-10">
+                        <ul class="list">
+                            <li class="list-item"><a href="#">home</a></li>
+                            <li class="list-item"><a href="#">services</a></li>
+                            <li class="list-item"><a href="#">portfolio</a></li>
+                            <li class="list-item"><a href="#">about</a></li>
+                            <li class="list-item"><a href="#">contact</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-10">
-                    <ul class="list">
-                        <li class="list-item"><a href="#">home</a></li>
-                        <li class="list-item"><a href="#">services</a></li>
-                        <li class="list-item"><a href="#">portfolio</a></li>
-                        <li class="list-item"><a href="#">about</a></li>
-                        <li class="list-item"><a href="#">contact</a></li>
-                    </ul>
+            </div>
+            <div class="intro-inner">
+                <h4>Welcome to our studio!</h4>
+                <h1>It,s nice to meet you</h1>
+                <a href="#" class="btn">tell me more</a>
+            </div>   
+        </header>
+
+        <section class="services">
+            <div class="container">
+                <div class="title">
+                    <h2>services</h2>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <a href="#"><i class="fas fa-shopping-basket"></i></a>
+                        <h5>E-commerce</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div> 
+                    <div class="col-4">
+                        <a href="#"><i class="fas fa-check-square"></i></a>
+                        <h5>responsive web</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div> 
+                    <div class="col-4">
+                        <a href="#"><i class="fas fa-lock"></i></a>
+                        <h5>web security</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div> 
                 </div>
             </div>
-        </div>
-        <div class="intro-inner">
-            <h4>Welcome to our studio!</h4>
-            <h1>It,s nice to meet you</h1>
-            <a href="#" class="btn">tell me more</a>
-        </div>   
-    </header>
-
-    <section class="services">
-        <div class="container">
-            <div class="title">
-                <h2>services</h2>
-                <p>Lorem ipsum dolor sit amet.</p>
+        </section>
+        
+        <section class="portfolio">
+            <div class="container">
+                <div class="title">
+                    <h2>our portfolio</h2>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="gallery">
+                            <a href="#"><img src="../images/photo2.jpeg" alt="photo2"></a>
+                            <div class="gallery-item">
+                                <h5 class="card-title">Ebony&Ivory</h5>
+                                <p class="card-text">Branding</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="gallery">
+                            <a href="#"><img src="../images/photo3.jpeg" alt="photo3"></a>
+                            <div class="gallery-item">
+                                <h5 class="card-title">Smart stationary</h5>
+                                <p class="card-text">Print design</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="gallery">
+                            <a href="#"><img src="../images/photo4.jpeg" alt="photo4"></a>
+                            <div class="gallery-item">
+                                <h5 class="card-title">Clever poster</h5>
+                                <p class="card-text">Print design</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="gallery">
+                            <a href="#"><img src="../images/photo5.jpeg" class="card-img-top" alt="photo5"></a>
+                            <div class="gallery-item">
+                                <h5 class="card-title">Vinyl record</h5>
+                                <p class="card-text">Product mock-up</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="gallery">
+                            <a href="#"><img src="../images/photo6.jpeg" class="card-img-top" alt="photo6"></a>
+                            <div class="gallery-item">
+                                <h5 class="card-title">Treehouse template</h5>
+                                <p class="card-text">Web design</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="gallery">
+                            <a href="#"><img src="../images/photo7.jpeg" class="card-img-top" alt="photo7"></a>
+                            <div class="gallery-item">
+                                <h5 class="card-title">Burned logo</h5>
+                                <p class="card-text">Branding</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="row">
-                <div class="col-4">
-                    <i class="fas fa-shopping-basket"></i>
-                    <h5>E-commerce</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div> 
-                <div class="col-4">
-                    <i class="fas fa-check-square"></i>
-                    <h5>responsive web</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div> 
-                <div class="col-4">
-                    <i class="fas fa-lock"></i>
-                    <h5>web security</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div> 
+        </section>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 copyright">
+                        <p>&copy Copyright 2020 FreebiesXpress.com</p>
+                    </div>
+                    <div class="col-8">
+                        <ul class="icons">
+                            <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
+                            <li><a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a></li>
+                            <li><a href="#"><i class="fab fa-google-plus-g"></i>Google</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-    </section>
-    
-    <section class="porfolio">
-
-    </section>
-
-    <footer>
-
-    </footer>
-</body>
+        </footer>
+    </body>
 </html>
