--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-2">
-                        <h3>Golden</h3>
+                        <h3 class="logo">Golden</h3>
                     </div>
                     <div class="col-10">
                         <ul class="list">
@@ -28,12 +28,12 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="intro-inner">
-                <h4>Welcome to our studio!</h4>
-                <h1>It,s nice to meet you</h1>
-                <a href="#" class="btn">tell me more</a>
-            </div>   
+                <div class="intro-inner">
+                    <h4>Welcome to our studio!</h4>
+                    <h1>It,s nice to meet you</h1>
+                    <a href="#" class="btn">tell me more</a>
+                </div> 
+            </div>  
         </header>
 
         <section class="services">
@@ -43,17 +43,17 @@
                     <p>Lorem ipsum dolor sit amet.</p>
                 </div>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <a href="#"><i class="fas fa-shopping-basket"></i></a>
                         <h5>E-commerce</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div> 
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <a href="#"><i class="fas fa-check-square"></i></a>
                         <h5>responsive web</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div> 
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <a href="#"><i class="fas fa-lock"></i></a>
                         <h5>web security</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -69,7 +69,7 @@
                     <p>Lorem ipsum dolor sit amet.</p>
                 </div>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <div class="gallery">
                             <a href="#"><img src="../images/photo2.jpeg" alt="photo2"></a>
                             <div class="gallery-item">
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <div class="gallery">
                             <a href="#"><img src="../images/photo3.jpeg" alt="photo3"></a>
                             <div class="gallery-item">
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <div class="gallery">
                             <a href="#"><img src="../images/photo4.jpeg" alt="photo4"></a>
                             <div class="gallery-item">
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <div class="gallery">
                             <a href="#"><img src="../images/photo5.jpeg" class="card-img-top" alt="photo5"></a>
                             <div class="gallery-item">
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <div class="gallery">
                             <a href="#"><img src="../images/photo6.jpeg" class="card-img-top" alt="photo6"></a>
                             <div class="gallery-item">
@@ -116,7 +116,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <div class="gallery">
                             <a href="#"><img src="../images/photo7.jpeg" class="card-img-top" alt="photo7"></a>
                             <div class="gallery-item">
@@ -132,10 +132,10 @@
         <footer class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-4 copyright">
+                    <div class="col-sm-4 copyright">
                         <p>&copy Copyright 2020 FreebiesXpress.com</p>
                     </div>
-                    <div class="col-8">
+                    <div class="col-sm-8">
                         <ul class="icons">
                             <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
                             <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
